--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 appdirs==1.4.3
 Django==1.11
+django-admin-view-permission==0.8
 mysqlclient==1.3.10
+olefile==0.44
 packaging==16.8
+Pillow==4.1.1
 pyparsing==2.2.0
 pytz==2017.2
 six==1.10.0
